--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,3 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
-  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
+  Автор &copy; {{ site.time | date: "%Y" }} - <a href="https://www.facebook.com/dima.samodurov">{{ site.author }}</a>
 </p>
