Display "powered by"

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,5 @@
-<p>
+<span>
   Автор &copy; {{ site.time | date: "%Y" }} - <a href="https://www.facebook.com/dima.samodurov">{{ site.author }}</a>
-</p>
+</span>
+<br/>
+<span class="credit">сайт створено за допомогою <a href="http://octopress.org">Octopress</a></span>
