--- a/source/_includes/2014-11-17/chat.haml
+++ b/source/_includes/2014-11-17/chat.haml
@@ -8,7 +8,7 @@
     Данило: Так, це є. При умові, що з боку Майдану всі білі й пухнасті - весь беркут - зло. Але ти не дивишся на людей які цього не робили. Ти виправдовуєш людей які вбивали мілиціонерів. Я хотів би знайти тих хто на відео і відплатити тим самим. Як це зробити? Коли навіть ти не хочеш чути? Мене не влаштовує показова розправа над будь ким. Мене не влаштовує задоволення людей, які хочуть розправи хоча можуть іти до правди. Чому - тому що не мені треба, та я бачу в цьому ваду далеко наперед. Читав Марію Матіос “Уляна та Довгопол”? Не розумієш що таке громадянська війна? Мікро войни? Натравити людей одне на одного просто. Хто цього не розуміє - буде все життя воювати, нажаль не за правду.
   .a
     .time [11/17/14, 10:28:00 PM]
-    Гриць: тут  важливо хто перший підняв палку. далі - думати не треба. далі - треба виживати. ніхто цих псів не заставляв розганяти Майжан палками. і потреби такої НЕ БУЛО. можна було просто випровадити всіх попід руки. Але ці істоти  - НЕЛЮДИ, які кайфують від знущань над слабшим, неозброєним... тому в мене до них ставлення як до скажених псів
+    Гриць: тут  важливо хто перший підняв палку. далі - думати не треба. далі - треба виживати. ніхто цих псів не заставляв розганяти Майдан палками. і потреби такої НЕ БУЛО. можна було просто випровадити всіх попід руки. Але ці істоти  - НЕЛЮДИ, які кайфують від знущань над слабшим, неозброєним... тому в мене до них ставлення як до скажених псів
   .b
     .time [11/17/14, 10:30:23 PM]
     Данило: Беркут - це солдати, як бультер’єри. Питання хто і як їх використовує. Це не виправдовує злочинів проти людяності, та чи не важливіше унеможливити таке використання?
